k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    field.cattle.io/projectId: p-5vlnx
  name: iot-test
