k8s/service-http.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-monolith-http
  annotations: {}
  labels: {}
spec:
  selector:
    app: iot-monolith
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
